CI: use npm install instead of npm ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: backend
-        run: npm ci
+        run: npm install
 
       - name: Install PostgreSQL client (for pg_isready)
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
