--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,37 @@
   "name": "muhasebe-backend",
   "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "cross-env PORT=3001 NODE_ENV=development nodemon server.js",
+    "migrate": "node scripts/migrate.js",
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand",
+    "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules ./node_modules/jest/bin/jest.js --watchAll",
+    "test:ci": "cross-env NODE_ENV=test node --experimental-vm-modules ./node_modules/jest/bin/jest.js --ci --runInBand --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "dotenv": "^16.6.1",
+    "express": "^4.19.0",
+    "pg": "^8.11.5",
+    "pino": "^9.10.0",
+    "pino-http": "^10.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.4"
   }
 }
