--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
-    "dotenv": "^16.6.1",
+    "dotenv": "16.6.1",
     "express": "^4.19.0",
     "pg": "^8.11.5",
     "pino": "^9.10.0",
