--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
         with:
           node-version: '22.x'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run lint
-      - run: npm test
+      - name: Install dependencies
+        run: npm ci
+        working-directory: backend
+      - name: Lint
+        run: npm run lint
+        working-directory: backend
+      - name: Test
+        run: npm test
+        working-directory: backend
