--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-package-lock.json
+# package-lock.json satır kaldırıldı
 
 # Env
 .env
