--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,19 @@
 {
   "name": "muhasebe-backend",
-  "version": "1.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-  "dotenv": "^16.6.1",
-  "express": "^4.19.2",
-  "pg": "^8.11.5"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "sqlite3": "^5.1.6"
+  }
 }
-}
+
+---
