--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 4000
-CMD ["npm","start"]
+EXPOSE 5173
+CMD ["npm","run","dev","--","--host","0.0.0.0"]
 
 ---
